# musubi-tuner

./: .gitignore  GIMMVFI.py  README.ja.md  README.md  WAN2.2-LORA-PROMPT-TRAINING-REQUEST.md  WAN_CHARACTER_INFERENCE_GUIDE.md  blissful_ui.py  cache_latents.py  cache_text_encoder_outputs.py  character_prompts.txt  convert_lora.py  convert_masks_to_alpha.py  download_wan22_models.sh  eval_dlay_lokr.sh  fpack_cache_text_encoder_outputs.py  fpack_generate_video.py  fpack_train_network.py  hidream_o1_cache_pixel.py  hidream_o1_cache_text_encoder_outputs.py  hidream_o1_generate_image.py  hidream_o1_train.py  hidream_o1_train_network.py  hv_generate_video.py  hv_train.py  hv_train_network.py  ideogram4_cache_latents.py  ideogram4_cache_text_encoder_outputs.py  ideogram4_generate_image.py  ideogram4_train_network.py  krea2_cache_latents.py  krea2_cache_text_encoder_outputs.py  krea2_generate_image.py  krea2_train_network.py  lens_cache_latents.py  lens_cache_text_encoder_outputs.py  lens_download.py  lens_generate_image.py  lens_train.py  lens_train_network.py  lora.py  (+17 more)
.ai/context/: overview.md
.cursor/rules/: project-rule.mdc
.github/workflows/: tests.yml
.ipynb_checkpoints/: download_wan22_models-checkpoint.sh  sample_prompts_dlay-checkpoint.txt
benchmarking/: bench_fused_qknorm_rope.py  profile_fused_qknorm_rope.py
blissful_tuner/: GIMMVFI.py  advanced_rope.py  blissful_args.py  blissful_logger.py  cfg.py  cfg_parser.py  cfgzerostar.py  common_extensions.py  facefix.py  fp8_optimization.py  latent_preview.py  metaview.py  model_utility.py  prompt_management.py  prompt_weighting.py  rope.py  upscaler.py  utils.py  video_processing_common.py  wan_v2v.py  yolo_blur.py
configs/: dlay_lokr_prodigy_training.toml  dlay_lokr_prodigy_training_full.toml  dlay_lokr_training.toml  dlay_lora_training.toml
configs/.ipynb_checkpoints/: dlay_dataset-checkpoint.toml  dlay_lokr_prodigy_training-checkpoint.toml  dlay_lokr_prodigy_training_full-checkpoint.toml  dlay_lokr_training-checkpoint.toml  dlay_lora_training-checkpoint.toml
dataset/: config_utils.py  dataset_config.md  image_video_dataset.py
docs/: LORA_TRAINING_REFERENCE.md  MASKED_LOSS_TRAINING_GUIDE.md  NETWORK_ARGS_REFERENCE.md  PRODIGY_PLUS_SCHEDULEFREE_ULTIMATE_GUIDE.md  TRAINER_MASKED_LOSS_COMPARISON.md  advanced_config.md  block_swap.md  cute_attention.md  dataset_config.md  ernie_image.md  flux_2.md  flux_kontext.md  framepack.md  hidream_o1.md  hidream_o1_full_finetune_spec.md  hidream_o1_i2i_training_spec.md  hidream_o1_official_update_spec.md  hunyuan_video.md  hunyuan_video_1_5.md  ideogram4.md  ideogram4_fp8_adaptation_spec.md  krea2.md  lens.md  lens_finetune_spec.md  lens_spec.md  loha_lokr.md  longcat.md  qwen_image.md  qwen_image_architecture.md  sampling_during_training.md  wan.md  wan22_architecture.md  zimage.md
docs/archive/: CUTE_INTEGRATION_PLAN.md  MASKED_LOSS_BUG_REPORT.md
docs/planning/: DIFFUSERS_INTEGRATION_OPPORTUNITIES.md  MASKED_LOSS_IMPLEMENTATION_PLAN.md  MASKED_LOSS_RESEARCH_FINDINGS.md
docs/plans/: 2026-01-21-kandinsky5-blissification-design.md  2026-01-21-upstream-integration-design-v3.md  2026-01-29-masked-prior-preservation-design.md  2026-01-29-prior-prediction-features-plan.md  2026-05-07-sample-images-refactor-plan.md
docs/specs/: krea2_spec.md
frame_pack/: framepack_utils.py  hunyuan_video_packed.py
hunyuan_model/: attention.py  models.py  pipeline_hunyuan_video.py  text_encoder.py  token_refiner.py  vae.py
modules/: custom_offloading_utils.py  fp8_optimization_utils.py  scheduling_flow_match_discrete.py  unet_causal_3d_blocks.py
networks/: lora.py  lora_framepack.py  lora_wan.py
notes/: 2026-06-10-triton-reference-f32.md
old-sh-scripts/: train_dlay_lokr.sh  train_dlay_lokr_prodigy.sh  train_dlay_lora.sh
old-sh-scripts/.ipynb_checkpoints/: train_dlay_lokr-checkpoint.sh  train_dlay_lokr_prodigy-checkpoint.sh  train_dlay_lora-checkpoint.sh
src/blissful_tuner/: GIMMVFI.py  advanced_rope.py  blissful_args.py  blissful_core.py  blissful_logger.py  blissful_settings.py  common_extensions.py  extract_lora.py  facefix.py  fp8_optimization.py  guidance.py  hvw_posemb_layers.py  latent_preview.py  metaview.py  model_utility.py  profiling.py  prompt_management.py  scheduling.py  scheduling_flow_match_lcm.py  taehv.py  taesd.py  upscaler.py  utils.py  video_processing_common.py  video_to_png.py  yolo_blur.py
src/musubi_tuner/: cache_latents.py  cache_text_encoder_outputs.py  caption_images_by_qwen_vl.py  convert_lora.py  convert_masks_to_alpha.py  ernie_image_cache_latents.py  ernie_image_cache_text_encoder_outputs.py  ernie_image_generate_image.py  ernie_image_train_network.py  flux_2_cache_latents.py  flux_2_cache_text_encoder_outputs.py  flux_2_generate_image.py  flux_2_train_network.py  fpack_cache_latents.py  (+58 more)
tests/: conftest.py  test_arch_registry_defaults.py  test_converter_fixes.py  test_converter_naming.py  test_dataset_caption_directory.py  test_detect_network_type.py  test_dit_output.py  test_feature_hooks.py  test_flux2_per_token_timesteps.py  test_fused_norm_rope.py  test_fused_norm_rope_gradients.py  test_fused_qknorm_rope.py  test_fused_qknorm_rope_blocks.py  test_gamma_warmup.py  test_grad_metrics.py  test_ideogram4_autoencoder.py  test_ideogram4_fp8_loading.py  test_ideogram4_lora_sampling.py  test_ideogram4_synthetic.py  test_ideogram4_te_fp8_loading.py  test_ideogram4_timesteps.py  test_krea2_gather_valid_text.py  test_krea2_timesteps.py  test_lens_text_cache.py  test_lokr_factor_roundtrip.py  test_lora_dtype_bridging.py  test_mask_loss.py  test_merge_hybrid.py  test_merge_weights_loha.py  test_merge_weights_lokr.py  test_packed_vs_original.py  test_per_token_hooks.py  test_plateau_logit_normal_sampler.py  test_rep_proj_optimizer.py  test_sai_model_spec.py  test_save_precision.py  test_self_flow_arg_validation.py  test_self_flow_call_dit.py  test_self_flow_ema.py  test_self_flow_features.py  (+14 more)
tools/: apply_instance_mask_to_weighted_mask.py  create_instance_masks.py
utils/: huggingface_utils.py  safetensors_utils.py  sai_model_spec.py  train_utils.py
(+180 files in other folders)
